@@ -254,7 +254,12 @@
         <inspection_tool class="AccessToStaticFieldLockedOnInstance" level="WARNING" enabled="true" />
       </profile>
     </profiles>
-    <list size="0" />
+    <list size="4">
+      <item index="0" class="java.lang.String" itemvalue="SERVER PROBLEM" />
+      <item index="1" class="java.lang.String" itemvalue="INFO" />
+      <item index="2" class="java.lang.String" itemvalue="WARNING" />
+      <item index="3" class="java.lang.String" itemvalue="ERROR" />
+    </list>
   </component>
   <component name="JavacSettings">
     <option name="DEBUGGING_INFO" value="true" />
@@ -471,62 +476,6 @@
         <entry key="/Users/dan/Projects/uncommons-maths">
           <value>
             <SvnBranchConfiguration>
-              <option name="branchMap">
-                <map>
-                  <entry key="https://uncommons-maths.dev.java.net/svn/uncommons-maths/branches">
-                    <value>
-                      <list>
-                        <SvnBranchItem>
-                          <option name="creationDateMillis" value="1257386009032" />
-                          <option name="revision" value="102" />
-                          <option name="url" value="https://uncommons-maths.dev.java.net/svn/uncommons-maths/branches/Maven" />
-                        </SvnBranchItem>
-                        <SvnBranchItem>
-                          <option name="creationDateMillis" value="1195317062854" />
-                          <option name="revision" value="1" />
-                          <option name="url" value="https://uncommons-maths.dev.java.net/svn/uncommons-maths/branches/README" />
-                        </SvnBranchItem>
-                      </list>
-                    </value>
-                  </entry>
-                  <entry key="https://uncommons-maths.dev.java.net/svn/uncommons-maths/tags">
-                    <value>
-                      <list>
-                        <SvnBranchItem>
-                          <option name="creationDateMillis" value="1233867597747" />
-                          <option name="revision" value="89" />
-                          <option name="url" value="https://uncommons-maths.dev.java.net/svn/uncommons-maths/tags/Release-1.2" />
-                        </SvnBranchItem>
-                        <SvnBranchItem>
-                          <option name="creationDateMillis" value="1219441277561" />
-                          <option name="revision" value="65" />
-                          <option name="url" value="https://uncommons-maths.dev.java.net/svn/uncommons-maths/tags/Release-1.1" />
-                        </SvnBranchItem>
-                        <SvnBranchItem>
-                          <option name="creationDateMillis" value="1195515801543" />
-                          <option name="revision" value="25" />
-                          <option name="url" value="https://uncommons-maths.dev.java.net/svn/uncommons-maths/tags/Release-1.0.2" />
-                        </SvnBranchItem>
-                        <SvnBranchItem>
-                          <option name="creationDateMillis" value="1195404249873" />
-                          <option name="revision" value="21" />
-                          <option name="url" value="https://uncommons-maths.dev.java.net/svn/uncommons-maths/tags/Release-1.0.1" />
-                        </SvnBranchItem>
-                        <SvnBranchItem>
-                          <option name="creationDateMillis" value="1195346675598" />
-                          <option name="revision" value="17" />
-                          <option name="url" value="https://uncommons-maths.dev.java.net/svn/uncommons-maths/tags/Release-1.0" />
-                        </SvnBranchItem>
-                        <SvnBranchItem>
-                          <option name="creationDateMillis" value="1195317062854" />
-                          <option name="revision" value="1" />
-                          <option name="url" value="https://uncommons-maths.dev.java.net/svn/uncommons-maths/tags/README" />
-                        </SvnBranchItem>
-                      </list>
-                    </value>
-                  </entry>
-                </map>
-              </option>
               <option name="branchUrls">
                 <list>
                   <option value="https://uncommons-maths.dev.java.net/svn/uncommons-maths/branches" />
